[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/gameplay/Qbit_view/QbitView.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/gameplay/Qbit_view/QbitViewClassic2Qbits.gd" type="Script" id=2]
[ext_resource path="res://src/gameplay/Qbit_view/sphere_view/Qbit_sphere_views/SphereView2Qbits.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/fonts/Orkney/Orkney Bold.otf" type="DynamicFontData" id=4]
[ext_resource path="res://src/gameplay/Qbit_view/matrix_view/MatrixView2Qbits.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/art/InGameUI/XYZcoords.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 90
font_data = ExtResource( 4 )

[node name="QbitViewClassic2Qbits" instance=ExtResource( 1 )]
margin_bottom = 877.0
script = ExtResource( 2 )

[node name="CurrentLabel" type="Label" parent="." index="1"]
margin_left = 29.657
margin_top = 138.593
margin_right = 454.657
margin_bottom = 299.593
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0666667, 0.176471, 0.305882, 1 )
text = "Actual"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GoalLabel" type="Label" parent="." index="2"]
margin_left = 445.657
margin_top = 138.593
margin_right = 870.657
margin_bottom = 299.593
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.0666667, 0.176471, 0.305882, 1 )
text = "Objetivo"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spheres" parent="." index="3"]
margin_top = 213.0
margin_bottom = 845.0

[node name="CurrentSphereView2Qbits" parent="Spheres" index="0" instance=ExtResource( 3 )]
margin_left = 111.682
margin_top = 43.245
margin_right = 371.682
margin_bottom = 596.245
mouse_filter = 2

[node name="GoalSphereView2Qbits" parent="Spheres" index="1" instance=ExtResource( 3 )]
margin_left = 543.681
margin_top = 43.245
margin_right = 803.681
margin_bottom = 596.245
mouse_filter = 2

[node name="XYZCoordsSprite" type="Sprite" parent="Spheres" index="2"]
position = Vector2( 427.701, 580.73 )
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 6 )

[node name="Matrices" parent="." index="4"]
margin_top = 208.0
margin_bottom = 876.0

[node name="CurrentMatrixView2Qbits" parent="Matrices" index="0" instance=ExtResource( 5 )]
position = Vector2( 60.2843, 48 )

[node name="GoalMatrixView2Qbits" parent="Matrices" index="1" instance=ExtResource( 5 )]
position = Vector2( 484.284, 48 )
